--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
     "country-flag-icons": "^1.5.20",
+    "framer-motion": "^12.23.13",
     "qrcode": "^1.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
