--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.12.2",
     "country-flag-icons": "^1.5.20",
     "framer-motion": "^12.23.13",
+    "lucide-react": "^0.544.0",
     "qrcode": "^1.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
